testsuite/tests/package/T22884.hs
module T22884 where

import Data.Text
